--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -42,10 +42,10 @@
         <table class="virkailija-table-1">
             <thead>
             <tr>
-                <th>nimi</th>
-                <th>tyyppi</th>
+                <th>Nimi</th>
+                <th>Tyyppi</th>
                 <th>oid</th>
-                <th>poista</th>
+                <th>Poista</th>
             </tr>
             </thead>
             <tbody>
@@ -85,10 +85,10 @@
         <table class="virkailija-table-1 width-60">
             <thead>
             <tr>
-                <th>koodi</th>
-                <th>arvo</th>
-                <th>nimi</th>
-                <th>poista</th>
+                <th>Koodi</th>
+                <th>Arvo</th>
+                <th>Nimi</th>
+                <th>Poista</th>
             </tr>
             </thead>
             <tbody>
