vt-700: funktiokutsujen lisäys #1

--- a/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
@@ -221,8 +221,8 @@
             </div>
             <div class="clear"></div>
         </div>
-
-        <span class="button small" ng-click="removeFunktiokutsu(funktioSelection)"><i class="fa fa-trash-o"></i> Poista funktiokutsu</span>
+        
+        <span class="button small" ng-click="removeFunktiokutsu()"><i class="fa fa-trash-o"></i> Poista funktiokutsu</span>
 
     </div>
 
