vt-700: laskentakaavaviitteiden poistaminen toteutettu

--- a/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
@@ -109,7 +109,7 @@
         </div>
 
 
-        <span class="button small" ng-click="removeFunktiokutsu(funktioSelection); funktioSelection = null; funktioasetukset.showLaskentakaavaInformation = false">Poista funktiokutsu</span>
+        <span class="button small" ng-click="removeLaskentakaavaviite()">Poista laskentakaavaviite</span>
     </div>
 </div>
 
